--- a/css/about.css
+++ b/css/about.css
@@ -99,6 +99,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    color: #000000;
 }
 
 .intro_us {
@@ -159,6 +160,15 @@
     margin: 4px;
 }
 
-.intro_head {
-    color: #000000;
+.skon_festival_color {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    /* position: absolute;
+    width: 156px;
+    height: 170px;
+    left: calc(50% - 156px/2 - 8px);
+    top: 1000px;
+    margin-top: 130px; */
 }
