--- a/css/about.css
+++ b/css/about.css
@@ -65,14 +65,11 @@
 
 .about {
     padding-top: 20px;
-    font-style: normal;
-    font-weight: 500;
     font-size: 15px;
     line-height: 15px;
     text-align: center;
     letter-spacing: 0.1em;
     color: #000000;
-    font-family: 'BMJUA';
 }
 
 .about_intro {
@@ -90,8 +87,7 @@
 
 .intro_us_div {
     font-family: 'BMJUA';
-    margin: 0 -28px;
-    padding: 12px;
+    margin: 0;
     background-color: #fbfbfbe6;
     border-radius: 50px 50px 50px 50px;
     display: flex;
@@ -105,7 +101,6 @@
 .intro_us {
     padding-top: 20px;
     font-style: normal;
-    font-weight: 500;
     font-size: 15px;
     line-height: 15px;
     text-align: center;
