--- a/css/about.css
+++ b/css/about.css
@@ -4,39 +4,31 @@
     font-weight: normal;
     font-style: normal;
 }
-
 .bg_color {
-    position: relative;
     margin: 0 auto;
-    width: 100%;
-    height: 100%;
     background: #040c4b no-repeat center center fixed;
-    background-size: cover;
-    background-attachment: fixed;
     font-family: 'BMJUA';
 }
-
 .bg {
     position: relative;
     background-image: url(../img/i_main_bg.png);
     background-repeat: no-repeat;
     background-position: top center;
-    align-items: center;
-    justify-content: center;
-}
-
+    background-attachment: fixed;
+    height: 100%;
+    width: 100%;
+    margin: 0px;
+} 
 .nav_bar {
     box-sizing: border-box;
     flex-direction: row;
     gap: 25px;
     display: flex;
-    -webkit-box-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
     align-items: center;
     min-height: 10vh;
+    font-family: 'BMJUA';
 }
-
 .nav_button {
     height: 50px;
     color: #ffffff;
@@ -50,19 +42,14 @@
     border: none;
     cursor: pointer;
     transition: border-bottom 2s ease 0s;
+    font-family: 'BMJUA';
 }
-
 .aboutus {
     display: flex;
     flex-direction: column;
-    -webkit-box-pack: center;
     justify-content: center;
     align-items: center;
-    /* margin-bottom: 10vh; */
-    animation: fadeIn;
-    animation-duration: .8s;
 }
-
 .about {
     padding-top: 20px;
     font-size: 15px;
@@ -71,20 +58,17 @@
     letter-spacing: 0.1em;
     color: #000000;
 }
-
 .about_intro {
     padding: 10px 0px;
     color: rgb(170, 152, 135);
     font-size: 10px;
 }
-
 .p1 {
     color: #ffffff;
     text-align: center;
     letter-spacing: 0.1em;
     padding: 4px 0px 6px;
 }
-
 .intro_us_div {
     font-family: 'BMJUA';
     margin: 0;
@@ -96,8 +80,8 @@
     justify-content: center;
     text-align: center;
     color: #000000;
+    padding: 10px;
 }
-
 .intro_us {
     padding-top: 20px;
     font-style: normal;
@@ -107,7 +91,6 @@
     letter-spacing: 0.1em;
     color: #000000;
 }
-
 .member_list {
     width: 100%;
     height: 100%;
@@ -116,10 +99,9 @@
     justify-content: center;
     align-items: center;
 }
-
 .card_info_left {
-    width: 150px;
-    height: 150px;
+    width: 140px;
+    height: 140px;
     padding: 5px;
     margin-right: 12px;
     text-align: center;
@@ -127,12 +109,10 @@
     background: #ffffff;
     box-shadow: 0 0 8px #00000040;
     border-radius: 16px;
-    transition: box-shadow .25s, transform .25s;
 }
-
 .card_info_right {
-    width: 150px;
-    height: 150px;
+    width: 140px;
+    height: 140px;
     padding: 5px;
     margin-left: 15px;
     text-align: center;
@@ -140,28 +120,23 @@
     background: #ffffff;
     box-shadow: 0 0 8px #00000040;
     border-radius: 16px;
-    transition: box-shadow .25s, transform .25s;
 }
-
 .dept {
-    margin-top: 2px;
-    font-size: 8.5pt;
+    margin-top: 1px;
+    font-size: 8pt;
     margin-bottom: 0px;
 }
-
 .name {
-    font-size: 12pt;
-    margin: 0px;
+    font-size: 10pt;
+    margin-top: 2px;
 }
-
 .skon_festival_color {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: start;
     padding: 0px;
-    /* position: absolute;
-    width: 156px;
-    height: 170px;
-    left: calc(50% - 156px/2 - 8px);
-    top: 1000px;
-    margin-top: 130px; */
+    margin-bottom: 30px;
+    margin-right: 10px;
+    margin-top: 10px;
+    width: 5%;
 }
