--- a/css/booth_24timetable.css
+++ b/css/booth_24timetable.css
@@ -3,8 +3,7 @@
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMJUA.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-}
-
+} 
 .bg_color {
     position: relative;
     margin: 0 auto;
@@ -15,7 +14,6 @@
     background-attachment: fixed;
     font-family: 'BMJUA';
 }
-
 .bg {
     position: relative;
     background-image: url(../img/i_main_bg.png);
@@ -23,8 +21,8 @@
     background-position: top center;
     align-items: center;
     justify-content: center;
+    background-attachment: fixed;
 }
-
 .nav_bar {
     box-sizing: border-box;
     flex-direction: row;
@@ -34,7 +32,6 @@
     align-items: center;
     min-height: 10vh;
 }
-
 .nav_button {
     height: 50px;
     color: #ffffff;
@@ -48,7 +45,6 @@
     border: transparent;
     cursor: pointer;
 }
-
 .date_div {
     box-sizing: border-box;
     margin: 0px;
@@ -186,10 +182,6 @@
 .time_table_box {
     box-sizing: border-box;
     margin: 0px;
-    flex-direction: row;
-    flex-basis: 100%;
-    -webkit-box-flex: 0;
-    flex-grow: 0;
     max-width: 100%;
     padding: 0px;
     border: 0px;
@@ -201,10 +193,8 @@
     width: 80%;
     margin: 0px 10%;
     display: flex;
-    -webkit-box-pack: center;
     justify-content: center;
     flex-wrap: wrap;
-    -webkit-box-align: center;
     align-items: center;
     padding: 0px;
     border: 0px;
@@ -248,24 +238,6 @@
     margin: 10px 10px 10px 10px;
 }
 
-/* .list_logo_name_box {
-    width: 300px;
-    height: 55px;
-    border-radius: 50px;
-    display: inline-flex;
-    background-color: #C2E3BD;
-    /* .list_logo_name_box {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 43px;
-    width: 250px;
-    height: 34px;
-    flex: none;
-    flex-grow: 0;
-} */
-
 .list_logo {
     width: 35px;
     height: 35px;
@@ -304,10 +276,4 @@
     flex-direction: column;
     align-items: center;
     padding: 0px;
-    /* position: absolute;
-    width: 156px;
-    height: 170px;
-    left: calc(50% - 156px/2 - 8px);
-    top: 1000px;
-    margin-top: 130px; */
 }
