--- a/css/booth_guest.css
+++ b/css/booth_guest.css
@@ -4,7 +4,6 @@
     font-weight: normal;
     font-style: normal;
 }
-
 .bg_color {
     position: relative;
     margin: 0 auto;
@@ -15,29 +14,23 @@
     background-attachment: fixed;
     font-family: 'BMJUA';
 }
-
 .bg {
     position: relative;
     background-image: url(../img/i_main_bg.png);
-    /* background-repeat: no-repeat; */
     background-position: top center;
     align-items: center;
     justify-content: center;
 }
-
 .nav_bar {
     box-sizing: border-box;
     flex-direction: row;
     gap: 25px;
     display: flex;
-    -webkit-box-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
     align-items: center;
     min-height: 10vh;
     font-family: 'BMJUA';
 }
-
 .nav_button {
     height: 50px;
     color: #ffffff;
@@ -46,14 +39,17 @@
     font-weight: 500;
     background-color: transparent;
     background-position: center center;
-    background-repeat: no-repeat;
     background-size: contain;
-    border: none;
+    border: transparent;
     cursor: pointer;
-    transition: border-bottom 2s ease 0s;
     font-family: 'BMJUA';
 }
-
+.all_div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .date_div {
     box-sizing: border-box;
     margin: 0px;
@@ -67,13 +63,58 @@
     font: inherit;
     vertical-align: baseline;
 }
-
-.day_guest {
+.second_day {
     display: flex;
     justify-content: center;
     align-items: center;
     color: #ffffff;
     background-color: transparent;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-left: 10px;
+    margin-right: 10px;
+    border: transparent;
+}
+.second_dday {
+    margin: 0px;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.5;
+    letter-spacing: 0.00938em;
+    font-family: 'BMJUA';
+    text-align: center;
+}
+.third_day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    background-color: transparent;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-left: 10px;
+    margin-right: 10px;
+    border: transparent;
+}
+.third_dday {
+    margin: 0px;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.5;
+    letter-spacing: 0.00938em;
+    font-family: 'BMJUA';
+    text-align: center;
+}
+.day_guest {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    background: rgba(160, 160, 160, 0.39);
     width: 70px;
     height: 70px;
     border-radius: 70%;
@@ -92,58 +133,6 @@
     font-family: 'BMJUA';
     text-align: center;
 }
-
-.second_day {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #ffffff;
-    background-color: transparent;
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    cursor: pointer;
-    margin-left: 10px;
-    margin-right: 10px;
-    border: transparent;
-}
-
-.second_dday {
-    margin: 0px;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 1.5;
-    letter-spacing: 0.00938em;
-    font-family: 'BMJUA';
-    text-align: center;
-}
-
-.third_day {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #ffffff;
-    background-color: transparent;
-    width: 70px;
-    height: 70px;
-    background: rgba(160, 160, 160, 0.39);
-    border-radius: 50%;
-    cursor: pointer;
-    margin-left: 10px;
-    margin-right: 10px;
-    border: transparent;
-}
-
-.third_dday {
-    margin: 0px;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 1.5;
-    letter-spacing: 0.00938em;
-    font-family: 'BMJUA';
-    text-align: center;
-}
-
 .booth_festival {
     display: flex;
     justify-content: center;
@@ -151,7 +140,6 @@
     min-height: 15vh;
     font: inherit;
 }
-
 .booth_table {
     display: flex;
     justify-content: center;
@@ -161,10 +149,9 @@
     background: rgba(255, 255, 255, 0.77);
     border-radius: 15px;
 }
-
 .booth_time_name {
     width: 50%;
-    height: 90%;
+    height: 100%;
     background-color: transparent;
     border: none;
     border-radius: 15px;
@@ -172,10 +159,8 @@
     color: #000000;
     cursor: pointer;
     font-family: 'BMJUA';
-    transition: all 0.2s ease 0s;
     box-sizing: border-box;
 }
-
 .booth_time_table {
     width: 50%;
     height: 100%;
@@ -187,132 +172,71 @@
     cursor: pointer;
     font-family: 'BMJUA';
 }
-
 .time_table_box {
     box-sizing: border-box;
     margin: 0px;
-    flex-direction: row;
-    flex-basis: 100%;
-    -webkit-box-flex: 0;
-    flex-grow: 0;
     max-width: 100%;
     padding: 0px;
     border: 0px;
     font: inherit;
     vertical-align: baseline;
 }
-
-.time_table_box_in {
-    width: 80%;
-    margin: 0px 10%;
-    display: flex;
-    -webkit-box-pack: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    -webkit-box-align: center;
-    align-items: center;
-    padding: 0px;
-    border: 0px;
-    font: inherit;
-    vertical-align: baseline;
-}
-
-.real_time_table {
-    /* width: 325px; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin: 0px;
-    padding: 0px;
-    border: 0px;
-    font: inherit;
-    vertical-align: baseline;
-    background-color: #ffffff;
-    border-radius: 15px;
-}
-
-.real_time_table_in {
-    overflow-y: scroll;
-    height: 430px;
-}
-
-.time_table_list {
-    line-height: 55px;
-    display: flex;
-    cursor: pointer;
-    border-top: 10px #040c4b;
-    border-bottom: 10px #040c4b;
-}
-
-.list_num {
-    width: 35px;
-    height: 35px;
-    line-height: 25px;
-    display: flex;
-    margin: 10px 10px 10px 10px;
-}
-
-/* .list_logo_name_box {
-    width: 300px;
-    height: 55px;
-    border-radius: 50px;
-    display: inline-flex;
-    background-color: #C2E3BD;
-    /* .list_logo_name_box {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 43px;
-    width: 250px;
-    height: 34px;
-    flex: none;
-    flex-grow: 0;
-} */
-
-.list_logo {
-    width: 35px;
-    height: 35px;
-    line-height: 35px;
-    background-color: #dfffda;
-    margin: 10px;
-    border-radius: 50%;
-}
-
-.list_time_name {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0px;
-    width: 240px;
-    height: 34px;
-}
-
-.list_time {
-    font-size: 12px;
-    text-align: left;
-    color: #000000;
-    padding-left: 5px;
-    padding-right: 10px;
-}
-
-.list_name {
-    width: 150px;
-    font-size: 12px;
+.intro_us {
+    font-style: normal;
+    font-size: 20px;
+    line-height: 15px;
     text-align: center;
-    color: #000000;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
 }
-
+.member_list {
+    width: 100%;
+    height: 100%;
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.card_info_left {
+    width: 150px;
+    height: 150px;
+    padding: 5px;
+    margin-right: 12px;
+    text-align: center;
+    box-sizing: border-box;
+    background: #ffffff;
+    box-shadow: 0 0 8px #00000040;
+    border-radius: 16px;
+}
+.card_info_center {
+    width: 150px;
+    height: 150px;
+    padding: 5px;
+    text-align: center;
+    box-sizing: border-box;
+    background: #ffffff;
+    box-shadow: 0 0 8px #00000040;
+    border-radius: 16px;
+}
+.card_info_right {
+    width: 150px;
+    height: 150px;
+    padding: 5px;
+    margin-left: 15px;
+    text-align: center;
+    box-sizing: border-box;
+    background: #ffffff;
+    box-shadow: 0 0 8px #00000040;
+    border-radius: 16px;
+}
+.name {
+    font-size: 10pt;
+    margin: 0px;
+}
 .booth_bg_scon {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: end;
     padding: 0px;
-    /* position: absolute;
-    width: 156px;
-    height: 170px;
-    left: calc(50% - 156px/2 - 8px);
-    top: 1000px;
-    margin-top: 130px; */
+    margin-right: -3%;
 }
